--- a/src/main/resources/static/css/monster_misc.css
+++ b/src/main/resources/static/css/monster_misc.css
@@ -1,2 +1,32 @@
-table.monsterList tr.odd { background-color: #808080;text-align: center; font-family: Arial, Helvetica, sans-serif; text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000; }
-table.monsterList tr.even { background-color: #404040;text-align: center; font-family: Arial, Helvetica, sans-serif; text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000; }
+table.monsterList tr.odd {
+    background-color: #808080;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+    }
+
+table.monsterList tr.even {
+background-color: #404040;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+}
+
+body{
+
+    background-image:url("../js/jquery/images/ui-bg_loop_25_000000_21x21.png");
+
+}
+
+.formSpacer{
+
+    margin-bottom:40px;
+
+}
+
+.checkbox{
+
+text-align:left;
+width:151px;
+
+}
